# learn_torch

./: README.md  camera_0.rules
src/camera_pkg/: CMakeLists.txt  package.xml
src/camera_pkg/config/: cam_params.yaml  camera_info.yaml  left.yaml  left_cam_info.yaml  right.yaml  right_cam_info.yaml
src/camera_pkg/include/camera_pkg/: camera_split.hpp
src/camera_pkg/launch/: camera.launch.py  img_proc.launch.py
src/camera_pkg/src/: camera_split.cpp
src/yolov5_ros2/config/: camera_info.yaml
src/yolov5_ros2/launch/: yolov5_ros2.launch.py
src/yolov5_ros2/yolov5_ros2/: yolo_detect_2d.py
